# nom-wasm

./: Cargo.toml  README.md  justfile
src/: debug.rs  error.rs  hex.rs  index.rs  input.rs  isa.rs  leb128.rs  lib.rs  module.rs  name.rs  ordering.rs  parser.rs  section.rs  sequence.rs  static_assert.rs  storage.rs  tag.rs  types.rs  values.rs
src/error/: add_cause.rs  cause.rs  component.rs  invalid_flags.rs  invalid_tag.rs  length_mismatch.rs  verbose_error.rs
src/isa/: br_table_targets.rs  expr.rs  instr_alloc.rs  instr_definitions.rs  instr_kind.rs  instr_parser.rs  instructions.rs  invalid_instr.rs  invalid_opcode.rs  mem_arg.rs  opcode.rs  opcode_enums.rs  opcodes.rs  parse_instr.rs  parse_instruction.rs
src/module/: binary.rs  core_indices.rs  custom.rs  import_sec.rs  module_section.rs  module_section_sequence.rs  preamble.rs  type_sec.rs
src/module/import_sec/: import.rs  import_desc.rs
src/section/: section_sequence.rs
src/sequence/: sequence_iter.rs  vector_parser.rs
src/storage/: allocator_heap.rs  default_heap.rs  vector.rs
src/types/: alloc_func_type.rs  func_type.rs  global_type.rs  limits.rs  parse_type.rs  result_type.rs  type_parsers.rs  val_type.rs
src/types/func_type/: alloc_func_type.rs  debug_func_type.rs
src/values/: float.rs  leb128.rs  sequence.rs  v128.rs  vector.rs
src/values/vector/: bounded_vector.rs  bounded_vector_iter.rs  full_vector.rs  full_vector_iter.rs  vector_iter.rs  vector_struct.rs
tests/it/: instructions.rs  leb128.rs  lib.rs  module_sections.rs
tests/it/snapshots/: tests__instructions__basic_expr.snap  (+2 more)
