[package]
name = "nom-wasm"
description = "Zero-allocation WebAssembly parser using nom"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
nom = { version = "7.1.3", default-features = false }

[dev-dependencies]
insta = "1.34.0"

[features]
default = ["std"]
std = ["alloc", "nom/std"]
alloc = ["nom/alloc"]

[lib]
test = false

[[test]]
name = "tests"
path = "tests/it/lib.rs"
