[package]
name = "nom-wasm"
description = "Zero-allocation WebAssembly parser using nom"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
nom = { version = "7.1.3", default-features = false }

[dependencies.allocator-api2]
version = "0.2.16"
default-features = false
features = ["alloc"]
optional = true

[dev-dependencies]
insta = "1.34.0"

[features]
default = ["std", "allocator-api2"]
std = ["alloc", "nom/std"]
alloc = ["nom/alloc"]
allocator-api2 = ["dep:allocator-api2", "alloc"]

[lib]
test = false

[[test]]
name = "tests"
path = "tests/it/lib.rs"
